2010-08-20  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Slider labels do not update as you move the sliders on this page
        https://bugs.webkit.org/show_bug.cgi?id=41020
        
        Testcase for repainting inline children on layout, inside a multicol element.

        * fast/repaint/multicol-repaint.html: Added.
        * platform/mac/fast/repaint/multicol-repaint-expected.checksum: Added.
        * platform/mac/fast/repaint/multicol-repaint-expected.png: Added.
        * platform/mac/fast/repaint/multicol-repaint-expected.txt: Added.

2010-08-20  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Darin Fisher.

        Manual test to check that canceling the notification on a closed window does
        not result in crash.
        https://bugs.webkit.org/show_bug.cgi?id=43645

        * fast/notifications/notifications-window-close-crash-expected.txt: Added.
        * fast/notifications/notifications-window-close-crash.html: Added.

2010-08-19  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Fix failing WebGL tests in Chromium in-process-webgl port
        https://bugs.webkit.org/show_bug.cgi?id=44305

        * fast/canvas/webgl/context-attributes-alpha-depth-stencil-antialias.html: Add "#ifdef GLES" around precision keywords. 
        * fast/canvas/webgl/gl-bind-attrib-location-test-expected.txt: Re-enable the failing tests.
        * fast/canvas/webgl/gl-bind-attrib-location-test.html: Add "#ifdef GLES" around precision keywords.
        * fast/canvas/webgl/read-pixels-pack-alignment-expected.txt: Ditto.
        * fast/canvas/webgl/read-pixels-pack-alignment.html: Ditto.
        * fast/canvas/webgl/resources/fragmentShader.frag: Ditto.
        * fast/canvas/webgl/texImage2DImageDataTest.html: Ditto.
        * fast/canvas/webgl/texture-active-bind.html: Ditto.
        * fast/canvas/webgl/texture-complete.html: Ditto.