@@ -1,0 +1,5 @@
+This tests that dispatching a keyboard event created via javascript does not crash.
+
+PASSED
+
+
