@@ -1,0 +1,17 @@
+<p>This tests that dispatching a keyboard event created via javascript does
+not crash.</p>
+<p id="results"></p>
+
+<input id="1"> 
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+
+var evt = document.createEvent("KeyboardEvent");
+evt.initKeyboardEvent("keydown", true, true, window, 0, 0, 0, 0, 0, 0, "a");
+var elt = document.getElementById("1");
+elt.focus();
+elt.dispatchEvent(evt);
+
+document.getElementById("results").innerText = "PASSED";
+</script>
