@@ -1,3 +1,13 @@
+2010-08-20  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Kent Tamura.
+
+        [chromium] fix a null pointer crash when dispatching JS keyboard events
+        https://bugs.webkit.org/show_bug.cgi?id=44313
+
+        * src/WebInputEventConversion.cpp:
+        (WebKit::WebKeyboardEventBuilder::WebKeyboardEventBuilder):
+
 2010-08-20  Jay Civelli  <jcivelli@chromium.org>
 
         Reviewed by Darin Fisher.
