@@ -1,3 +1,13 @@
+2010-08-20  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Kent Tamura.
+
+        [chromium] fix a null pointer crash when dispatching JS keyboard events
+        https://bugs.webkit.org/show_bug.cgi?id=44313
+
+        * fast/events/initkeyboardevent-crash-expected.txt: Added.
+        * fast/events/initkeyboardevent-crash.html: Added.
+
 2010-08-20  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Dan Bernstein.
